# rsomics-vcf-popgen

./: Cargo.toml
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  freq.rs  fst.rs  hardy.rs  het.rs  lib.rs  main.rs  missing.rs  pi.rs  singleton.rs  vcf.rs
tests/: compat.rs
tests/golden/: small.vcf
